--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 		<title>Emaar inc.</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
+		<script src="assets/js/ie/html5shiv.js"></script>
 		<link rel="stylesheet" href="assets/css/main.css" />
-		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
+		<link rel="stylesheet" href="assets/css/ie8.css" />
 	</head>
 	<body class="homepage">
 		<div id="page-wrapper">
