--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 		<title>Emaar inc.</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<script src="assets/js/ie/html5shiv.js"></script>
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<link rel="stylesheet" href="assets/css/ie8.css" />
+		<script src="html5shiv.js"></script>
+		<link rel="stylesheet" href="main.css" />
+		<link rel="stylesheet" href="ie8.css" />
 	</head>
 	<body class="homepage">
 		<div id="page-wrapper">
@@ -252,12 +252,12 @@
 
 		<!-- Scripts -->
 
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.dropotron.min.js"></script>
-			<script src="assets/js/skel.min.js"></script>
-			<script src="assets/js/util.js"></script>
+			<script src="jquery.min.js"></script>
+			<script src="jquery.dropotron.min.js"></script>
+			<script src="skel.min.js"></script>
+			<script src="util.js"></script>
 			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
-			<script src="assets/js/main.js"></script>
+			<script src="main.js"></script>
 
 	</body>
 </html>
