--- a/index.html
+++ b/index.html
@@ -22,34 +22,29 @@
 
 						<!-- Logo -->
 							<div id="logo">
-								<h1><a href="index.html">Verti</a></h1>
-								<span>by HTML5 UP</span>
+								<h1><a href="index.html">Emaar</a></h1>
+								<span></span>
 							</div>
 
 						<!-- Nav -->
 							<nav id="nav">
 								<ul>
-									<li class="current"><a href="index.html">Welcome</a></li>
+									
 									<li>
-										<a href="#">Dropdown</a>
+										<a href="#">Services</a>
 										<ul>
-											<li><a href="#">Lorem ipsum dolor</a></li>
-											<li><a href="#">Magna phasellus</a></li>
+											<li><a href="#">Web and App Development</a></li>
+											<li><a href="#">SEO and Social Media Marketing</a></li>
 											<li>
-												<a href="#">Phasellus consequat</a>
-												<ul>
-													<li><a href="#">Lorem ipsum dolor</a></li>
-													<li><a href="#">Phasellus consequat</a></li>
-													<li><a href="#">Magna phasellus</a></li>
-													<li><a href="#">Etiam dolore nisl</a></li>
-												</ul>
+												<a href="#">Architectural Design</a>
+												
 											</li>
-											<li><a href="#">Veroeros feugiat</a></li>
+											<li><a href="#">Exporting and Importing Goods</a></li>
 										</ul>
 									</li>
-									<li><a href="left-sidebar.html">Left Sidebar</a></li>
-									<li><a href="right-sidebar.html">Right Sidebar</a></li>
-									<li><a href="no-sidebar.html">No Sidebar</a></li>
+									<li><a href="left-sidebar.html">Request a Quote</a></li>
+									<li><a href="right-sidebar.html">Careers</a></li>
+									<li><a href="no-sidebar.html">Contact Us</a></li>
 								</ul>
 							</nav>
 
@@ -61,7 +56,7 @@
 					<div id="banner" class="box container">
 						<div class="row">
 							<div class="7u 12u(medium)">
-								<h2>Hi. This is Verti.</h2>
+								<h2>Welcome.</h2>
 								<p>It's a free responsive site template by HTML5 UP</p>
 							</div>
 							<div class="5u 12u(medium)">
