--- a/index.html
+++ b/index.html
@@ -131,13 +131,13 @@
 								<!-- Sidebar -->
 									<div id="sidebar">
 										<section class="widget thumbnails">
-											<h3>Interesting stuff</h3>
+											<h3>Granites We Import!</h3>
 											<div class="grid">
 												<div class="row 50%">
-													<div class="6u"><a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a></div>
-													<div class="6u"><a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a></div>
-													<div class="6u"><a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a></div>
-													<div class="6u"><a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a></div>
+													<div class="6u"><a href="#" class="image fit"><img src="pic04.jpg" alt="" /></a></div>
+													<div class="6u"><a href="#" class="image fit"><img src="pic05.jpg" alt="" /></a></div>
+													<div class="6u"><a href="#" class="image fit"><img src="pic06.jpg" alt="" /></a></div>
+													<div class="6u"><a href="#" class="image fit"><img src="pic07.jpg" alt="" /></a></div>
 												</div>
 											</div>
 											<a href="#" class="button icon fa-file-text-o">More</a>
