--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 									</li>
 									<li><a href="left-sidebar.html">Request a Quote</a></li>
 									<li><a href="right-sidebar.html">Careers</a></li>
-									<li><a href="no-sidebar.html">Contact Us</a></li>
+									
 								</ul>
 							</nav>
 
@@ -224,8 +224,8 @@
 											<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
 											<li><a href="#" class="icon fa-pinterest"><span class="label">Pinterest</span></a></li>
 										</ul>
-										<p>1234 Fictional Road<br />
-										Nashville, TN 00000<br />
+										<p><br />
+										Hyderabad, India <br />
 										(800) 555-0000</p>
 									</section>
 
