--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 						<!-- Logo -->
 							<div id="logo">
-								<h1><a href="index.html">Emaar</a></h1>
+								<h1><a href="index.html">Emaar Exports and Imports</a></h1>
 								<span></span>
 							</div>
 
